--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pmc-laravel",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "build": "unbuild",
@@ -9,22 +9,32 @@
     "dev:build": "vite build dev",
     "dev:preview": "vite preview dev",
     "lint": "eslint .",
-    "prepublishOnly": "pnpm build",
+    "prepublishOnly": "yarn build",
     "release": "bumpp && npm publish"
   },
+  "dependencies": {
+    "axios-retry-after": "^2.0.0",
+    "humps": "^2.0.1"
+  },
   "peerDependencies": {
+    "@vuelidate/core": "^2.0.2",
+    "axios": "^1.3.6",
     "vue": "^3.2.47",
+    "vue-router": "^4.1.6",
     "vuetify": "^3.1.15"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.38.4",
+    "@types/humps": "^2.0.2",
     "@types/node": "^18.16.0",
     "@vitejs/plugin-vue": "^4.1.0",
+    "@vuelidate/core": "^2.0.2",
+    "axios": "^1.3.6",
     "bumpp": "^9.1.0",
-    "eslint": "^8.37.0",
+    "eslint": "^8.39.0",
     "typescript": "^4.9.3",
-    "unbuild": "^1.2.0",
-    "vite": "^4.1.0",
+    "unbuild": "^1.2.1",
+    "vite": "^4.3.1",
     "vite-plugin-dts": "^2.3.0",
     "vite-plugin-vuetify": "^1.0.2",
     "vuetify": "^3.1.15"
