--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "esModuleInterop": true,
     "jsx": "preserve",
     "isolatedModules": true,
-    "strict": true,
+    "strict": false,
     "strictNullChecks": true,
     "resolveJsonModule": true,
     "skipLibCheck": true,
