--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,16 @@
-image: node:latest
+# Yarn 2+
+image: node:lts
 
 stages:
   - deploy
 
+rules:
+  - if: $CI_COMMIT_TAG
+
 deploy:
   stage: deploy
+  before_script:
+    - corepack enable
+    - yarn set version stable
   script:
-    - echo "//${CI_SERVER_HOST}/api/v4/projects/${CI_PROJECT_ID}/packages/npm/:_authToken=${GITLAB_TOKEN}">.npmrc
-    - npm publish
-  environment: production
+    - yarn npm publish
