--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@paulmenheere/axios-laravel",
+  "name": "@pmc/axios-laravel",
   "version": "0.2.2",
   "type": "module",
   "scripts": {
@@ -62,6 +62,6 @@
     "dist"
   ],
   "publishConfig": {
-    "paulmenheere:registry": "https://gitlab.com/api/v4/projects/46025329/packages/npm/"
+    "registry": "https://gitlab.com/api/v4/projects/46025329/packages/npm/"
   }
 }
