--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,5 +1,5 @@
 npmScopes:
-  esp-code:
+  pmc:
     npmPublishRegistry: "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/npm/"
     npmAlwaysAuth: true
     npmAuthToken: "${GITLAB_TOKEN}"
