--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,9 +15,9 @@ deploy:
   rules:
   - if: $CI_COMMIT_TAG
   before_script:
-    - corepack enable
-    - yarn set version stable
     - mv .yarnrc.yml.gitlab .yarnrn.yml
+    - corepack enable
+    - yarn set version self
     - yarn install
     - yarn build
   script:
