--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "vite": "^4.3.1",
     "vite-plugin-dts": "^2.3.0",
     "vite-plugin-vuetify": "^1.0.2",
+    "vue-router": "^4.1.6",
     "vuetify": "^3.1.15"
   },
   "sideEffects": false,
