--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pmc/axios-laravel",
-  "version": "0.2.16",
+  "version": "0.2.17",
   "type": "module",
   "license": "MIT",
   "description": "Package to speed connecting to a Laravel API with Axios.",
@@ -12,7 +12,7 @@
     "dev:preview": "vite preview dev",
     "lint": "eslint .",
     "prepublishOnly": "yarn build",
-    "release": "bumpp && npm publish"
+    "release": "bumpp && yarn npm publish"
   },
   "dependencies": {
     "axios-retry-after": "^2.0.0",
