--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pmc/axios-laravel",
-  "version": "0.2.17",
+  "version": "0.2.18",
   "type": "module",
   "license": "MIT",
   "description": "Package to speed connecting to a Laravel API with Axios.",
@@ -16,6 +16,8 @@
   },
   "dependencies": {
     "axios-retry-after": "^2.0.0",
+    "@vuelidate/core": "^2.0.2",
+    "axios": "^1.3.6",
     "humps": "^2.0.1"
   },
   "peerDependencies": {
@@ -30,7 +32,6 @@
     "@types/humps": "^2.0.2",
     "@types/node": "^18.16.0",
     "@vitejs/plugin-vue": "^4.1.0",
-    "@vuelidate/core": "^2.0.2",
     "axios": "^1.4.0",
     "bumpp": "^9.1.0",
     "eslint": "^8.40.0",
